# Quake

./: CMakeLists.txt
Binaries/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  Element.fs  INSTALL.vcxproj  INSTALL.vcxproj.filters  Lamp.fs  Quake.sln  Quake.vcxproj  Quake.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  imgui.ini
Binaries/Quake.dir/Debug/: Quake.exe.recipe
Binaries/Quake.dir/Debug/Quake.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  Quake.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Binaries/x64/Debug/ALL_BUILD/: ALL_BUILD.recipe
Binaries/x64/Debug/ZERO_CHECK/: ZERO_CHECK.recipe
Binaries/x64/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  ZERO_CHECK.lastbuildstate
Content/Shaders/: 10.1.instancing.vs  3.2.blending.fs  6.1.skybox.vs  Debug.fs  Element.fs  Element.vs  Lamp.fs  Lamp.vs  Shadow.fs  Shadow.vs
Content/Textures/: Thumbs.db
Engine/Includes/assimp/: material.inl
Engine/Includes/learnopengl/: model.h
Engine/Libraries/reactphysics3d/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CTestTestfile.cmake  INSTALL.vcxproj  INSTALL.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  ReactPhysics3D.sln  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  install_manifest.txt  reactphysics3d.vcxproj  reactphysics3d.vcxproj.filters
Engine/Libraries/reactphysics3d/reactphysics3d.dir/Release/: reactphysics3d.lib.recipe
Source/: CoreMinimal.h  Main.cpp
Source/Common/: controls.cpp  shader.cpp
Source/Common/Physics/: PhysicsComponent.h
Source/Editor/Engine/: ActorsButton.cpp  ActorsButton.h  Button.cpp  Button.h  Engine.cpp  Engine.h  EngineWindow.cpp  EngineWindow.h  Event.h  Macros.h  Menu.h
Source/Editor/Engine/Controls/: Button.cpp  Button.h  Menu.h
Source/Editor/Engine/Interface/: IDrawable.cpp  IDrawable.h
Source/Editor/Engine/Material/: Material.cpp  Material.h
Source/Editor/Engine/Shader/: CustomShader.cpp  CustomShader.h
Source/Editor/Engine/Texture/: CustomTexture.cpp  CustomTexture.h
Source/Editor/Engine/Widgets/: ActiveWidget.cpp  ActiveWidget.h  DetailsWindow.cpp  DetailsWindow.h  EditorBarMenuWidget.cpp  EditorBarMenuWidget.h  LogWidget.cpp  LogWidget.h  PanelWidget.cpp  PanelWidget.h  PlaceActorsWidget.cpp  PlaceActorsWidget.h  Widget.cpp  Widget.h  WorldSettings.cpp  WorldSettings.h  WorldSettingsWidget.cpp  WorldSettingsWidget.h
Source/Editor/GUI/: ActiveWidget.cpp  ActiveWidget.h  Button.h  ContentBrowser.cpp  ContentBrowser.h  ContentField.cpp  ContentField.h  DynamicButtonField.cpp  DynamicButtonField.h  HUD.cpp  HUD.h  InputText.h  Outliner.cpp  Outliner.h  RegisterActor.cpp  RegisterActor.h  SearchOutliner.cpp  SearchOutliner.h  Widget.cpp  Widget.h
Source/Editor/GarbageCollector/: GarbageCollector.h
Source/Editor/Pointers/: TObjectPtr.h  TPtr.cpp  TSharedPtr.cpp  TSharedPtr.h  TSoftObjectPtr.cpp  TSubclassOf.h  TWeakPtr.cpp  TWeakPtr.h
Source/Runtime/Classes/GameFramework/: USpringArmComponent.cpp  USpringArmComponent.h
Source/Runtime/Classes/Input/: ActionInput.cpp  ActionInput.h  InputMapping.cpp  InputMapping.h
Source/Runtime/Classes/Kismet/: UKismetMathLibrary.cpp  UKismetMathLibrary.h  UKismetSystemLibrary.cpp  UKismetSystemLibrary.h
Source/Runtime/Classes/Raycast/: FRaycastCallback.cpp  FRaycastCallback.h
Source/Runtime/Classes/World/: UWorld.cpp  UWorld.h
Source/Runtime/Core/Containers/: FString.cpp  FString.h  TArray.h  TMap.h
Source/Runtime/Core/Math/: FColor.cpp  FColor.h  FMath.cpp  FMath.h  FMatrix.cpp  FMatrix.h  FRotator.cpp  FRotator.h  MathFwd.cpp  MathFwd.h  Quat.cpp  Quat.h  TTransform.cpp  TTransform.h
Source/Runtime/Core/Math/FVector/: FVector2.cpp  FVector2.h  FVector4.cpp  FVector4.h  TVector.h
Source/Runtime/Engine/GameFramework/GameModeBase/: GameModeBase.cpp  GameModeBase.h
Source/Runtime/Managers/: CameraManager.cpp  CameraManager.h  InputManager.cpp  InputManager.h  SoundManager.cpp  SoundManager.h  TimerManager.cpp  UGameInstance.cpp
Source/Runtime/Objects/: UObject.cpp  UObject.h  UWorld.cpp  UWorld.h
Source/Runtime/Objects/Actors/: AActor.cpp  AActor.h
Source/Runtime/Objects/Actors/Lights/: ALight.cpp  ALight.h
Source/Runtime/Objects/Actors/Skybox/: ASkybox.cpp  ASkybox.h
Source/Runtime/Objects/Camera/: UCamera.cpp  UCamera.h
Source/Runtime/Objects/Components/: UActorComponent.cpp  UComponent.cpp  UComponent.h  UMovementComponent.cpp  UMovementComponent.h  USceneComponent.cpp  USceneComponent.h
Source/Runtime/Objects/Components/RigideBody/: URigidBody.cpp  URigidBody.h  URigideBody.cpp  URigideBody.h
Source/Runtime/Objects/Mesh/: UPrimitiveMesh.cpp  UPrimitiveMesh.h  UStaticMesh.cpp  UStaticMesh.h  UStaticMeshComponent.cpp  UStaticMeshComponent.h
Source/Runtime/Objects/World/: UWorld.cpp  UWorld.h
Source/Runtime/PhysicsCore/: CollisionShape.cpp  CollisionShape.h
Source/Runtime/SlateCore/Widgets/: SWidget.cpp  SWidget.h
Source/Runtime/UI/: GameViewport.cpp  GameViewport.h
Source/Runtime/UI/Components/: UUserWidget.cpp  UUserWidget.h  UWidget.cpp  UWidget.h
Source/Runtime/UI/Components/ProgressBar/: UProgressBar.cpp  UProgressBar.h
Source/Runtime/UI/Components/TextBlock/: UTextBlock.cpp  UTextBlock.h
SourceOLD/: CoreMinimal.h  Main.cpp
SourceOLD/Editor/Engine/: Engine.cpp  Engine.h  EngineWindow.cpp  EngineWindow.h
SourceOLD/Editor/GarbageCollector/: GarbageCollector.cpp  GarbageCollector.h
SourceOLD/Editor/Pointers/: TPtr.h  TSoftObjectPtr.h
SourceOLD/Runtime/Core/Containers/: FString.cpp  FString.h  TArray.h
SourceOLD/Runtime/Managers/: CameraManager.cpp  CameraManager.h  CustomShader.cpp  CustomShader.h  InputManager.cpp  InputManager.h  TimerManager.h  UGameInstance.h
SourceOLD/Runtime/Objects/Actors/Lights/: ALight.cpp  ALight.h
SourceOLD/Runtime/Objects/Components/: UActorComponent.h
(+27 files in other folders)
